[gd_scene load_steps=5 format=3 uid="uid://dot7q6fxsd0g0"]

[ext_resource type="Texture2D" uid="uid://d2qd4ywssfie3" path="res://textures/fromeaglespeak.jpg" id="1_b64v3"]
[ext_resource type="Script" path="res://scripts/menus/settings_menu.gd" id="1_itlg8"]
[ext_resource type="FontFile" uid="uid://ccf0qqfxgkxs5" path="res://PressStart2P-Regular.ttf" id="3_ybwfc"]
[ext_resource type="PackedScene" uid="uid://bldmryd5eq435" path="res://scenes/menus/rebind_button.tscn" id="4_6t40d"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_itlg8")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_b64v3")
expand_mode = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
tab_alignment = 1
current_tab = 0

[node name="Video" type="TabBar" parent="TabContainer"]
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -26.0
offset_right = 500.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResolutionList" type="HBoxContainer" parent="TabContainer/Video/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ResolutionLabel" type="Label" parent="TabContainer/Video/VBoxContainer/ResolutionList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "RESOLUTION"

[node name="ResolutionOptionButton" type="OptionButton" parent="TabContainer/Video/VBoxContainer/ResolutionList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
alignment = 1
selected = 0
item_count = 4
popup/item_0/text = "1280x720"
popup/item_1/text = "1600x1050"
popup/item_1/id = 1
popup/item_2/text = "1600x1200"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3

[node name="WindowModeList" type="HBoxContainer" parent="TabContainer/Video/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="WindowModeLabel" type="Label" parent="TabContainer/Video/VBoxContainer/WindowModeList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "WINDOW MODE"

[node name="WindowModeOptionButton" type="OptionButton" parent="TabContainer/Video/VBoxContainer/WindowModeList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
alignment = 1
selected = 0
item_count = 4
popup/item_0/text = "WINDOWED"
popup/item_1/text = "BORDLERSS WINDOWED"
popup/item_1/id = 1
popup/item_2/text = "FULLSCREEN"
popup/item_2/id = 2
popup/item_3/text = "BORDERLESS FULLSCREEN"
popup/item_3/id = 3

[node name="VSyncButton" type="HBoxContainer" parent="TabContainer/Video/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VSyncLabel" type="Label" parent="TabContainer/Video/VBoxContainer/VSyncButton"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "VSYNC"

[node name="VSyncCheckBox" type="CheckBox" parent="TabContainer/Video/VBoxContainer/VSyncButton"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0

[node name="AntiAliasingList" type="HBoxContainer" parent="TabContainer/Video/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AntiAliasingLabel" type="Label" parent="TabContainer/Video/VBoxContainer/AntiAliasingList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "ANTI-ALIASING"

[node name="AntiAliasingOptionButton" type="OptionButton" parent="TabContainer/Video/VBoxContainer/AntiAliasingList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
selected = 0
item_count = 6
popup/item_0/text = "NONE"
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "TAA"
popup/item_2/id = 2
popup/item_3/text = "MSAA 2x"
popup/item_3/id = 3
popup/item_4/text = "MSAA 4x"
popup/item_4/id = 4
popup/item_5/text = "MSAA 8x"
popup/item_5/id = 4

[node name="ShadowQualityList" type="HBoxContainer" parent="TabContainer/Video/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ShadowQualityLabel" type="Label" parent="TabContainer/Video/VBoxContainer/ShadowQualityList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "SHADOW QUALITY"

[node name="ShadowQualityOptionButton" type="OptionButton" parent="TabContainer/Video/VBoxContainer/ShadowQualityList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
selected = 0
item_count = 6
popup/item_0/text = "HARD"
popup/item_1/text = "VERY LOW"
popup/item_1/id = 1
popup/item_2/text = "LOW"
popup/item_2/id = 2
popup/item_3/text = "MEDIUM"
popup/item_3/id = 3
popup/item_4/text = "HIGH"
popup/item_4/id = 4
popup/item_5/text = "ULTRA"
popup/item_5/id = 5

[node name="Audio" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -26.0
offset_right = 500.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="EffectsOnButton" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="EffectsOnLabel" type="Label" parent="TabContainer/Audio/VBoxContainer/EffectsOnButton"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "SOUND_EFFECTS_ON"

[node name="EffectsOnCheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/EffectsOnButton"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0

[node name="EffectsVolumeSlider" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="EffectsVolumeLabel" type="Label" parent="TabContainer/Audio/VBoxContainer/EffectsVolumeSlider"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "SOUND_EFFECTS_VOLUME"

[node name="EffectsVolumeHSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/EffectsVolumeSlider"]
custom_minimum_size = Vector2(280, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
tick_count = 10
ticks_on_borders = true

[node name="MusicOnButton" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MusicOnLabel" type="Label" parent="TabContainer/Audio/VBoxContainer/MusicOnButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "MUSIC_ON"

[node name="MusicOnCheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/MusicOnButton"]
layout_mode = 2

[node name="MusicVolumeSlider" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MusicVolumeLabel" type="Label" parent="TabContainer/Audio/VBoxContainer/MusicVolumeSlider"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "MUSIC_VOLUME"

[node name="MusicVolumeHSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/MusicVolumeSlider"]
custom_minimum_size = Vector2(280, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
tick_count = 10
ticks_on_borders = true

[node name="MuteOnUnfocusedButton" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MuteOnUnfocusedButton" type="Label" parent="TabContainer/Audio/VBoxContainer/MuteOnUnfocusedButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "MUTE_ON_UNFOCUSED"

[node name="MuteOnUnfocusedCheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/MuteOnUnfocusedButton"]
layout_mode = 2

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 2

[node name="KeyBindsLabel" type="Label" parent="TabContainer/Controls"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_right = 144.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
theme_override_font_sizes/font_size = 36
text = "KEYBINDS"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
current_tab = 0

[node name="Movement" type="TabBar" parent="TabContainer/Controls/TabContainer"]
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/TabContainer/Movement"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 60

[node name="MoveUpBind" parent="TabContainer/Controls/TabContainer/Movement/VBoxContainer" instance=ExtResource("4_6t40d")]
layout_mode = 2
_action_name = "move_up_0"

[node name="MoveDownBind" parent="TabContainer/Controls/TabContainer/Movement/VBoxContainer" instance=ExtResource("4_6t40d")]
layout_mode = 2
_action_name = "move_down_0"

[node name="MoveRightBind" parent="TabContainer/Controls/TabContainer/Movement/VBoxContainer" instance=ExtResource("4_6t40d")]
layout_mode = 2
_action_name = "move_right_0"

[node name="MoveLeftBind" parent="TabContainer/Controls/TabContainer/Movement/VBoxContainer" instance=ExtResource("4_6t40d")]
layout_mode = 2

[node name="DashBind" parent="TabContainer/Controls/TabContainer/Movement/VBoxContainer" instance=ExtResource("4_6t40d")]
layout_mode = 2
_action_name = "dash_0"

[node name="Utility" type="TabBar" parent="TabContainer/Controls/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/TabContainer/Utility"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.5
offset_top = -518.0
offset_right = 110.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0

[node name="Accessibility" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Accessibility"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -26.0
offset_right = 500.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="HapticFeedbackButton" type="HBoxContainer" parent="TabContainer/Accessibility/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Enables controller rumble"

[node name="HapticFeedbackLabel" type="Label" parent="TabContainer/Accessibility/VBoxContainer/HapticFeedbackButton"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "HAPTIC_FEEDBACK"

[node name="HapticFeedbackCheckbox" type="CheckBox" parent="TabContainer/Accessibility/VBoxContainer/HapticFeedbackButton"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0

[node name="HapticStrengthSlider" type="HBoxContainer" parent="TabContainer/Accessibility/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Sets the rumble strength if using a controller"

[node name="HapticStrengthLabel" type="Label" parent="TabContainer/Accessibility/VBoxContainer/HapticStrengthSlider"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "HAPTIC_FEEDBACK_STRENGTH"

[node name="HapticStrengthSlider" type="HSlider" parent="TabContainer/Accessibility/VBoxContainer/HapticStrengthSlider"]
custom_minimum_size = Vector2(280, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
tick_count = 10
ticks_on_borders = true

[node name="AutoAimButton" type="HBoxContainer" parent="TabContainer/Accessibility/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Enables Autoaim"

[node name="AutoAimLabel" type="Label" parent="TabContainer/Accessibility/VBoxContainer/AutoAimButton"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "AUTOAIM"

[node name="AutoAimCheckbox" type="CheckBox" parent="TabContainer/Accessibility/VBoxContainer/AutoAimButton"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0

[node name="DyslexiaModeButton" type="HBoxContainer" parent="TabContainer/Accessibility/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Enables Autoaim"

[node name="DyslexiaModeLabel" type="Label" parent="TabContainer/Accessibility/VBoxContainer/DyslexiaModeButton"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "DYSLEXIA_MODE"

[node name="DyslexiaCheckbox" type="CheckBox" parent="TabContainer/Accessibility/VBoxContainer/DyslexiaModeButton"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0

[node name="SaveSettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -340.0
offset_top = -55.9999
offset_right = -124.0
offset_bottom = -31.9999
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.5, 1.5)
mouse_filter = 1
theme_override_fonts/font = ExtResource("3_ybwfc")
text = "SAVE_SETTINGS"

[connection signal="pressed" from="SaveSettingsButton" to="." method="_on_save_settings_button_pressed"]
